--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 api-version: 1.13
 name: HotPotato
-main: tech.yfshadaow.HotPotato
+main: fun.kaituo.HotPotato
 version: 1.0
 author: YFshadaow
 depend: [GameUtils]
